# actix-sqlx-service

./: LICENSE  README.md
bookstore/: .example.env  Cargo.toml  log_config.yml
bookstore/migrations/: 20240101001155_init_schema.sql  20240101165309_alter_timestamp_type.sql
bookstore/src/: api_docs.rs  db_conn.rs  init.rs  lib.rs  main.rs  server.rs
bookstore/src/adapters/: mod.rs
bookstore/src/adapters/middleware/: jwt.rs
bookstore/src/adapters/repositories/: author.rs  book.rs  user.rs
bookstore/src/adapters/routes/: auth.rs  author.rs  book.rs  mod.rs  ping.rs  user.rs
bookstore/src/application/: mod.rs
bookstore/src/application/dto/request/: author.rs  book.rs  user.rs
bookstore/src/application/dto/response/: author.rs  book.rs  mod.rs  user.rs
bookstore/src/application/entities/: author.rs  book.rs  user.rs
bookstore/src/application/services/: auth.rs  author.rs  book.rs  mod.rs  user.rs
bookstore/src/application/state/: app_state.rs
deployment/: dev.yml  prod.yml
deployment/dev/bookstore/: Dockerfile
deployment/prod/bookstore/: Dockerfile
deployment/prod/nginx/: Dockerfile  nginx.conf
